[gd_scene load_steps=21 format=3 uid="uid://r636ykrvy680"]

[ext_resource type="Script" path="res://crossExam2_mistakescene.gd" id="1_eoycr"]
[ext_resource type="Texture2D" uid="uid://c2n75ywdx865y" path="res://assets/backgrounds/judgesSide.png" id="2_u3x8l"]
[ext_resource type="Texture2D" uid="uid://dvu0vh0ulmn3u" path="res://assets/sprites/elay_sprites.png" id="3_5vgqr"]
[ext_resource type="Texture2D" uid="uid://b5dwq1rgckqxk" path="res://assets/backgrounds/prosecutor-bench.png" id="4_ufwjh"]
[ext_resource type="Texture2D" uid="uid://c786m4q5scs3b" path="res://assets/backgrounds/defense-bench.png" id="5_dkabd"]
[ext_resource type="Texture2D" uid="uid://1l03kq0eie04" path="res://assets/backgrounds/witness-stand.png" id="6_bpnf0"]
[ext_resource type="FontFile" uid="uid://c42vn22udh74l" path="res://FOT-ModeMinBLargeStd-R.otf" id="7_2mhxg"]
[ext_resource type="Texture2D" uid="uid://cbgex0h8g788y" path="res://assets/ui/cornerButton_unpressed.png" id="8_j43c4"]
[ext_resource type="PackedScene" uid="uid://bwo7hmrw6dsbj" path="res://inventory/inventory_ui.tscn" id="9_grefd"]
[ext_resource type="AudioStream" uid="uid://dx6vblsbtd8lw" path="res://audio/blip.mp3" id="10_657b7"]
[ext_resource type="AudioStream" uid="uid://co66kk6avp7av" path="res://audio/typewriter.mp3" id="11_lp7cy"]

[sub_resource type="Animation" id="Animation_a6o8o"]
resource_name = "blinking"
length = 1.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 1.1, 1.3, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_xohpg"]
resource_name = "talking"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4r8cx"]
_data = {
"blinking": SubResource("Animation_a6o8o"),
"talking": SubResource("Animation_xohpg")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3xj2n"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8748x"]
texture = ExtResource("8_j43c4")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yf6s8"]
texture = ExtResource("8_j43c4")
modulate_color = Color(0.836576, 0.711346, 0.605006, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7d6s7"]
texture = ExtResource("8_j43c4")
modulate_color = Color(0.541247, 0.291974, 0.221316, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pa1m5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ve8fv"]

[node name="Node2D" type="Node2D"]

[node name="crossExam2_mistakescene" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_eoycr")

[node name="Background" type="TextureRect" parent="crossExam2_mistakescene"]
offset_right = 1930.0
offset_bottom = 1091.0
texture = ExtResource("2_u3x8l")

[node name="ElaySprite" type="Sprite2D" parent="crossExam2_mistakescene/Background"]
position = Vector2(982, 486)
scale = Vector2(1.08691, 1.07984)
texture = ExtResource("3_5vgqr")
hframes = 7
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="crossExam2_mistakescene/Background/ElaySprite"]
libraries = {
"": SubResource("AnimationLibrary_4r8cx")
}

[node name="prosecutor-bench" type="TextureRect" parent="crossExam2_mistakescene"]
offset_left = -279.0
offset_top = -115.0
offset_right = 1925.0
offset_bottom = 1090.0
texture = ExtResource("4_ufwjh")

[node name="defense-bench" type="TextureRect" parent="crossExam2_mistakescene"]
offset_left = 6.0
offset_top = -93.0
offset_right = 2146.0
offset_bottom = 1090.0
texture = ExtResource("5_dkabd")

[node name="witness-stand" type="TextureRect" parent="crossExam2_mistakescene"]
offset_left = -122.0
offset_top = -83.0
offset_right = 2055.0
offset_bottom = 1088.0
texture = ExtResource("6_bpnf0")

[node name="DialogueBoxButton" type="Button" parent="crossExam2_mistakescene"]
offset_left = -1932.0
offset_top = 803.0
offset_right = -1924.0
offset_bottom = 811.0
scale = Vector2(1567.73, 159.941)
theme_override_styles/focus = SubResource("StyleBoxEmpty_3xj2n")

[node name="DialogueBox" type="Polygon2D" parent="crossExam2_mistakescene"]
position = Vector2(-9, 0)
scale = Vector2(1.02753, 0.99655)
color = Color(0.168627, 0.168627, 0.168627, 0.470588)
polygon = PackedVector2Array(3, 803, 1951, 803, 1951, 1123, 3, 1123)

[node name="PersonNameBox" type="Polygon2D" parent="crossExam2_mistakescene"]
position = Vector2(145, 763)
scale = Vector2(0.807388, 0.375424)
color = Color(0.48825, 0.315, 0.7, 0.917647)
polygon = PackedVector2Array(-0.199969, 1.66217, 1.67047, -2.6637, 310.698, -2.6637, 365.822, 98.5553, 306.562, 188.651, 152.066, 188.651, -0.973211, 188.651, -60.1351, 90.5643)

[node name="DialogueText" type="Label" parent="crossExam2_mistakescene"]
offset_left = 219.0
offset_top = 858.0
offset_right = 667.0
offset_bottom = 924.0
scale = Vector2(3.32776, 3.02778)
theme_override_fonts/font = ExtResource("7_2mhxg")
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="PersonNameText" type="Label" parent="crossExam2_mistakescene"]
offset_left = 160.0
offset_top = 780.0
offset_right = 254.0
offset_bottom = 801.0
scale = Vector2(2.31653, 2.09949)
theme_override_fonts/font = ExtResource("7_2mhxg")
metadata/_edit_use_anchors_ = true

[node name="CourtRecordButton" type="Button" parent="crossExam2_mistakescene"]
offset_left = 1478.0
offset_top = -16.0
offset_right = 1597.0
offset_bottom = 9.0
scale = Vector2(3.82134, 4.93538)
theme_override_fonts/font = ExtResource("7_2mhxg")
theme_override_styles/normal = SubResource("StyleBoxTexture_8748x")
theme_override_styles/hover = SubResource("StyleBoxTexture_yf6s8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7d6s7")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_pa1m5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ve8fv")

[node name="CourtRecordText" type="Label" parent="crossExam2_mistakescene/CourtRecordButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.097823
anchor_top = -0.0529059
anchor_right = 0.0978255
anchor_bottom = -0.0529059
offset_left = 15.8363
offset_top = 9.22477
offset_right = 126.836
offset_bottom = 30.2248
scale = Vector2(0.689314, 0.523945)
theme_override_fonts/font = ExtResource("7_2mhxg")
text = "Court Record"
metadata/_edit_use_anchors_ = true

[node name="Inventory_UI" parent="crossExam2_mistakescene" instance=ExtResource("9_grefd")]
visible = false

[node name="blip" type="AudioStreamPlayer2D" parent="crossExam2_mistakescene"]
stream = ExtResource("10_657b7")
volume_db = 6.559

[node name="typewrite" type="AudioStreamPlayer2D" parent="crossExam2_mistakescene"]
stream = ExtResource("11_lp7cy")
volume_db = 5.943
